--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,3 @@
 <!-- Custom favicon -->
-<link rel="shortcut icon" type="image/jpeg" href="/assets/images/favicon.jpg">
-<link rel="icon" type="image/jpeg" href="/assets/images/favicon.jpg">
+<link rel="shortcut icon" type="image/jpeg" href="/assets/images/favicon.png">
+<link rel="icon" type="image/jpeg" href="/assets/images/favicon.png">
